<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/splashStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_start"
        app:layout_constraintBottom_toTopOf="@+id/splashResults"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splashRules" />

    <TextView
        android:id="@+id/splashTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_title"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/splashIntro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/splashRules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_rules"
        app:layout_constraintBottom_toTopOf="@+id/splashStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splashIntro" />

    <TextView
        android:id="@+id/splashIntro"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:gravity="center|fill_horizontal"
        android:text="@string/splash_intro"
        app:layout_constraintBottom_toTopOf="@+id/splashRules"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splashTitle" />

    <Button
        android:id="@+id/splashResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_results"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splashStart" />
</androidx.constraintlayout.widget.ConstraintLayout>